--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,8 @@ services:
       - POSTGRES_USER=admin
       - POSTGRES_DB=referral_db
     image: postgres:14.3-alpine
+  redis_codes:
+    container_name: redis_codes
+    ports:
+      - "6379:6379"
+    image: redis:7.2
