--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 Flask==3.1.0
 Flask-JWT-Extended==4.7.1
+Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 flask-swagger-ui==4.11.1
