--- a/settings_example.json
+++ b/settings_example.json
@@ -4,5 +4,11 @@
     "JWT_SECRET_KEY": "your-jwt-secret-key",
     "EMAIL_HUNTER_API_KEY": "your-email-hunter-api-key",
     "JWT_ACCESS_TOKEN_EXPIRES": 3600,
-    "REDIS_URL": "redis://localhost:6379/0"
+    "REDIS_URL_CHACE": "redis://localhost:6379/0",
+    "MAIL_SERVER": "smtp.mail.ru",
+    "MAIL_PORT": 465,
+    "MAIL_USE_TLS": 0,
+    "MAIL_USE_SSL": 1,
+    "MAIL_USERNAME": "@mail.ru",
+    "MAIL_PASSWORD": ""
 }
