--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,14 @@ Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 flask-swagger-ui==4.11.1
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 kombu==5.4.2
 Mako==1.3.9
 MarkupSafe==3.0.2
+packaging==24.2
 prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
