--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ alembic==1.14.1
 amqp==5.3.1
 billiard==4.2.1
 blinker==1.9.0
+boto3==1.37.13
+botocore==1.37.13
 celery==5.4.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -19,6 +21,7 @@ gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
+jmespath==1.0.1
 kombu==5.4.2
 Mako==1.3.9
 MarkupSafe==3.0.2
@@ -29,6 +32,7 @@ PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 redis==5.2.1
 requests==2.32.3
+s3transfer==0.11.4
 six==1.17.0
 SQLAlchemy==2.0.38
 typing_extensions==4.12.2
