--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ kombu==5.4.2
 Mako==1.3.9
 MarkupSafe==3.0.2
 packaging==24.2
+pillow==11.1.0
 prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
