--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ billiard==4.2.1
 blinker==1.9.0
 boto3==1.37.13
 botocore==1.37.13
+Brotli==1.1.0
 celery==5.4.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -11,29 +12,43 @@ click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+ConfigArgParse==1.7
 Flask==3.1.0
+flask-cors==5.0.1
+Flask-HTTPAuth==4.8.0
 Flask-JWT-Extended==4.7.1
+Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
+flask-profiler==1.8.1
 Flask-SQLAlchemy==3.1.1
 flask-swagger-ui==4.11.1
+gevent==24.11.1
+geventhttpclient==2.3.3
+greenlet==3.1.1
 gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 jmespath==1.0.1
 kombu==5.4.2
+locust==2.33.2
 Mako==1.3.9
 MarkupSafe==3.0.2
+msgpack==1.1.0
 packaging==24.2
 pillow==11.1.0
 prompt_toolkit==3.0.50
+psutil==7.0.0
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
+pyzmq==26.3.0
 redis==5.2.1
 requests==2.32.3
 s3transfer==0.11.4
+setuptools==77.0.1
+simplejson==3.20.1
 six==1.17.0
 SQLAlchemy==2.0.38
 typing_extensions==4.12.2
@@ -42,3 +57,5 @@ urllib3==2.3.0
 vine==5.1.0
 wcwidth==0.2.13
 Werkzeug==3.1.3
+zope.event==5.0
+zope.interface==7.2
