--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -25,7 +26,7 @@ jobs:
 
       - name: Run tests
         run: |
-          python3 -m unittest discover -s test -v
+          python3 -m unittest
 
   deploy:
     runs-on: ubuntu-latest
