add grafana + prometheus

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,6 +56,20 @@ services:
     volumes:
       - .:/app
 
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+
+  grafana:
+    container_name: grafana
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+
 volumes:
   postgres_data:
   redis_data:
