--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,3 +2,6 @@ scrape_configs:
   - job_name: 'flask_app'
     static_configs:
       - targets: ['referral_api:5000']
+  - job_name: 'node'
+    static_configs:
+      - targets: ['node-exporter:9100']
