--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,8 +32,6 @@ services:
     ports:
       - "5000:5000"
     command: ["gunicorn", "-w", "4", "--worker-class", "gevent", "--max-requests", "1000", "--max-requests-jitter", "50", "-b", "0.0.0.0:5000", "wsgi:app"]
-    volumes:
-      - .:/app
 
   celery_worker:
     container_name: referral_celery
@@ -42,9 +40,7 @@ services:
     depends_on:
       - referral_db
       - redis_codes
-    command: ["celery", "-A", "app.celery", "worker", "--loglevel=info"]
-    volumes:
-      - .:/app
+    command: ["celery", "-A", "app.app_factory.celery", "worker", "--loglevel=info"]
 
   db_migration:
     build: .
@@ -53,8 +49,6 @@ services:
       - referral_db
     command: >
       bash -c "flask db upgrade"
-    volumes:
-      - .:/app
 
   prometheus:
     container_name: prometheus
@@ -77,21 +71,21 @@ services:
       - 9100:9100
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0
+    image: elasticsearch:8.12.0
     environment:
       - discovery.type=single-node
     ports:
       - "9200:9200"
 
   logstash:
-    image: docker.elastic.co/logstash/logstash:8.12.0
+    image: logstash:8.12.0
     volumes:
       - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
     depends_on:
       - elasticsearch
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:8.12.0
+    image: kibana:8.12.0
     ports:
       - "5601:5601"
     environment:
