--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -71,21 +71,21 @@ services:
       - 9100:9100
 
   elasticsearch:
-    image: elasticsearch:8.12.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0
     environment:
       - discovery.type=single-node
     ports:
       - "9200:9200"
 
   logstash:
-    image: logstash:8.12.0
+    image: docker.elastic.co/logstash/logstash:8.12.0
     volumes:
       - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
     depends_on:
       - elasticsearch
 
   kibana:
-    image: kibana:8.12.0
+    image: docker.elastic.co/kibana/kibana:8.12.0
     ports:
       - "5601:5601"
     environment:
