--- a/logstash.conf
+++ b/logstash.conf
@@ -6,7 +6,7 @@ input {
 }
 output {
   elasticsearch {
-    hosts => ["http://localhost:9200"]
+    hosts => ["http://elasticsearch:9200"]
     index => "flask-logs"
   }
   stdout { codec => rubydebug }
