--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,8 @@ services:
     ports:
       - "5000:5000"
     command: ["gunicorn", "-w", "4", "--worker-class", "gevent", "--max-requests", "1000", "--max-requests-jitter", "50", "-b", "0.0.0.0:5000", "wsgi:app"]
+    volumes:
+      - ./app.log:/app/app.log
 
   celery_worker:
     container_name: referral_celery
@@ -63,6 +65,8 @@ services:
     image: grafana/grafana
     ports:
       - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
     
   node-exporter:
     container_name: node-exporter
@@ -71,20 +75,25 @@ services:
       - 9100:9100
 
   # elasticsearch:
+  #   container_name: elasticsearch
   #   image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0
   #   environment:
   #     - discovery.type=single-node
+  #     - xpack.security.enabled=false
   #   ports:
   #     - "9200:9200"
 
   # logstash:
+  #   container_name: logstash
   #   image: docker.elastic.co/logstash/logstash:8.12.0
   #   volumes:
   #     - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+  #     - ./app.log:/logs/app.log
   #   depends_on:
   #     - elasticsearch
 
   # kibana:
+  #   container_name: kibana
   #   image: docker.elastic.co/kibana/kibana:8.12.0
   #   ports:
   #     - "5601:5601"
@@ -92,7 +101,11 @@ services:
   #     - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
   #   depends_on:
   #     - elasticsearch
+  #   volumes:
+  #     - kibana_data:/usr/share/kibana/data
 
 volumes:
   postgres_data:
   redis_data:
+  grafana_data:
+  kibana_data:
