--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,36 +21,36 @@ services:
     volumes:
       - redis_data:/data
 
-  api:
-    container_name: referral_api
-    build: .
-    restart: always
-    depends_on:
-      - referral_db
-      - redis_codes
-      - db_migration
-    ports:
-      - "5000:5000"
-    command: ["gunicorn", "-w", "4", "--worker-class", "gevent", "--max-requests", "1000", "--max-requests-jitter", "50", "-b", "0.0.0.0:5000", "wsgi:app"]
-    volumes:
-      - ./app.log:/app/app.log
+  # api:
+  #   container_name: referral_api
+  #   build: .
+  #   restart: always
+  #   depends_on:
+  #     - referral_db
+  #     - redis_codes
+  #     - db_migration
+  #   ports:
+  #     - "5000:5000"
+  #   command: ["gunicorn", "-w", "4", "--worker-class", "gevent", "--max-requests", "1000", "--max-requests-jitter", "50", "-b", "0.0.0.0:5000", "wsgi:app"]
+  #   volumes:
+  #     - ./app.log:/app/app.log
 
-  celery_worker:
-    container_name: referral_celery
-    build: .
-    restart: always
-    depends_on:
-      - referral_db
-      - redis_codes
-    command: ["celery", "-A", "app.app_factory.celery", "worker", "--loglevel=info"]
+  # celery_worker:
+  #   container_name: referral_celery
+  #   build: .
+  #   restart: always
+  #   depends_on:
+  #     - referral_db
+  #     - redis_codes
+  #   command: ["celery", "-A", "app.app_factory.celery", "worker", "--loglevel=info"]
 
-  db_migration:
-    build: .
-    container_name: db_migration
-    depends_on:
-      - referral_db
-    command: >
-      bash -c "flask db upgrade"
+  # db_migration:
+  #   build: .
+  #   container_name: db_migration
+  #   depends_on:
+  #     - referral_db
+  #   command: >
+  #     bash -c "flask db upgrade"
 
   prometheus:
     container_name: prometheus
@@ -76,38 +76,13 @@ services:
     ports:
       - 9100:9100
 
-  # elasticsearch:
-  #   container_name: elasticsearch
-  #   image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0
-  #   environment:
-  #     - discovery.type=single-node
-  #     - xpack.security.enabled=false
-  #   ports:
-  #     - "9200:9200"
-
-  # logstash:
-  #   container_name: logstash
-  #   image: docker.elastic.co/logstash/logstash:8.12.0
-  #   volumes:
-  #     - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
-  #     - ./app.log:/logs/app.log
-  #   depends_on:
-  #     - elasticsearch
-
-  # kibana:
-  #   container_name: kibana
-  #   image: docker.elastic.co/kibana/kibana:8.12.0
-  #   ports:
-  #     - "5601:5601"
-  #   environment:
-  #     - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-  #   depends_on:
-  #     - elasticsearch
-  #   volumes:
-  #     - kibana_data:/usr/share/kibana/data
+  loki:
+    container_name: loki
+    image: grafana/loki:latest
+    ports:
+      - "3100:3100"
 
 volumes:
   postgres_data:
   redis_data:
   grafana_data:
-  kibana_data:
