--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,36 +21,36 @@ services:
     volumes:
       - redis_data:/data
 
-  # api:
-  #   container_name: referral_api
-  #   build: .
-  #   restart: always
-  #   depends_on:
-  #     - referral_db
-  #     - redis_codes
-  #     - db_migration
-  #   ports:
-  #     - "5000:5000"
-  #   command: ["gunicorn", "-w", "4", "--worker-class", "gevent", "--max-requests", "1000", "--max-requests-jitter", "50", "-b", "0.0.0.0:5000", "wsgi:app"]
-  #   volumes:
-  #     - ./app.log:/app/app.log
+  api:
+    container_name: referral_api
+    build: .
+    restart: always
+    depends_on:
+      - referral_db
+      - redis_codes
+      - db_migration
+    ports:
+      - "5000:5000"
+    command: ["gunicorn", "-w", "4", "--worker-class", "gevent", "--max-requests", "1000", "--max-requests-jitter", "50", "-b", "0.0.0.0:5000", "wsgi:app"]
+    volumes:
+      - ./app.log:/app/app.log
 
-  # celery_worker:
-  #   container_name: referral_celery
-  #   build: .
-  #   restart: always
-  #   depends_on:
-  #     - referral_db
-  #     - redis_codes
-  #   command: ["celery", "-A", "app.app_factory.celery", "worker", "--loglevel=info"]
+  celery_worker:
+    container_name: referral_celery
+    build: .
+    restart: always
+    depends_on:
+      - referral_db
+      - redis_codes
+    command: ["celery", "-A", "app.app_factory.celery", "worker", "--loglevel=info"]
 
-  # db_migration:
-  #   build: .
-  #   container_name: db_migration
-  #   depends_on:
-  #     - referral_db
-  #   command: >
-  #     bash -c "flask db upgrade"
+  db_migration:
+    build: .
+    container_name: db_migration
+    depends_on:
+      - referral_db
+    command: >
+      bash -c "flask db upgrade"
 
   prometheus:
     container_name: prometheus
